# pydetgen

./: README.md  code_test.ipynb  directory.md  generate_3.py  panel_0.yaml  pyproject.toml  six_panel_1z_full.yaml  test1.py  test2.ipynb  test2.py  test2.yaml  test3.py  test_20240711_160508.yml  test_20240711_160852.yml  test_20240711_171314.yml  test_20240722_182539.yml  test_generate_config.py  test_plot_3d.py
pydetgen/: __init__.py  draw_det_plotly3d.py  get_config.py  get_geoms.py
pydetgen/fileio/: yaml.py
pydetgen/fileio/yaml/: __init__.py  _yaml.py
pydetgen/geoms/: get_geoms.py
pydetgen/objects/: __init__.py  _objects.py
src/pydetgen/: __init__.py  _default.py
src/pydetgen/geometry/: __init__.py  _geoms.py
src/pydetgen/pattern/: __init__.py  _patterns.py
src/pydetgen/yaml/: __init__.py  _yaml.py
tests/: get_geom.ipynb  plot_3d.py
