[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Fang Han", email = "fhan0904@gmail.com" }]
dependencies = ["numpy", "pyyaml", "plotly"]
name = "pydetgen"
dynamic = ["version"]
description = "Python package for generating detector configuration"
readme = "README.md"
requires-python = ">=3.9.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/spebt/pydetgen/"
Issues = "https://github.com/spebt/pydetgen/issues"
Documentation = "https://spebt.github.io/pydetgen/"

[tool.setuptools]
include-package-data = true
packages = ["pydetgen"]
